proyecto de html con css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer proyecto html</title>
+    <style>
+        h1 {
+            color: blue;
+            font-size: 24px;
+        }
+        h2 {
+            color: red;
+            font-style: oblique;
+        }
+        p {
+            color: cyan;
+        }
+    </style>
 </head>
 <body>
     <h1>Hola Mundo</h1>
+    <h1>Hola mamones</h1>
+    <h2>momento xd</h2>
     <p>esto es un parrafo</p>
 </body>
 </html>
